--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -5,11 +5,11 @@ one:
   text: MyText
   comments_counter: 1
   likes_counter: 1
-  user: one
+  author: one
 
 two:
   title: MyString
   text: MyText
   comments_counter: 1
   likes_counter: 1
-  user: two
+  author: two
